[TASK] cleanup fonts; HTML around imprint

--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-
         <link href='https://fonts.googleapis.com/css?family=Jockey+One' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-
         <link href='https://fonts.googleapis.com/css?family=Molengo' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" href="css/normalize.min.css">
@@ -31,11 +24,13 @@
         <section id="info">
             <header>
                 <h1>Jochen Wichmann</h1>
-
                 <h2>freier Web- & TYPO3-Entwickler</h2>
                 <h3>aus Wiesbaden</h3>
-                <span class="icon glyphicon glyphicon-tree-deciduous"></span>
             </header>
+
+            <div id="tree">
+                <span class="icon glyphicon glyphicon-tree-deciduous"></span>
+            </div>
 
             <div id="content">
                 <p>Web-Entwicklung Front- & Backend, TYPO3 CMS, Extension&shy;entwicklung mit Extbase/Fluid, PHP, MySQL, HTML5, CSS3, JavaScript, jQuery, SASS, Git, Processing, Creative Coding, Auge für Design und Gestaltung</p>
@@ -53,8 +48,7 @@
                 <hr>
                 <footer>
                     <ul>
-                    <li class="first"><a href="html/datenschutz.html" target="_self">Datenschutz</a></li>
-                    <li><a href="html/impressum.html" target="_self">Disclaimer & Impressum</a></li>
+                    <li><a href="html/impressum.html" target="_blank">Disclaimer & Impressum</a></li>
                     </ul>
                 </footer>
             </div>
