[FEATURE/TASK] added .gitignore; styling details; imprint to top level; removed Datenschutz

--- a/impressum.html
+++ b/impressum.html
@@ -13,14 +13,14 @@
     <link href='https://fonts.googleapis.com/css?family=Jockey+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Molengo' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="../css/normalize.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head>
         <body>
-        <section>
+        <section id="imprint">
         <h1>Impressum</h1>
         <h2>Angaben gemäß § 5 TMG:</h2>
         <p>Jochen Wichmann<br />
@@ -34,7 +34,7 @@
             E-Mail: <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6a;&#x6f;&#x63;&#x68;&#x65;&#x6e;&#x2e;&#x61;&#x72;&#x62;&#x65;&#x69;&#x74;&#x65;&#x74;&#x40;&#x67;&#x6d;&#x78;&#x2e;&#x64;&#x65;">jochen.wichmann@gmx.de</a>
             </p>
 
-        <p>Quelle: <em><a href="https://www.e-recht24.de">https://www.e-recht24.de</a></em></p>
+        <p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></em></p>
 
 <br>
         <h1>Haftungsausschluss</h1>
