--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
 
             <div id="content">
-                <p>Web-Entwicklung Front- & Backend, TYPO3 CMS, Extension&shy;entwicklung mit Extbase/Fluid, PHP, MySQL, HTML5, CSS3, JavaScript, jQuery, SASS, Git, Processing, Creative Coding, Auge für Design und Gestaltung</p>
+                <p>Web-Entwicklung Front- & Backend · TYPO3 CMS · Extension&shy;entwicklung mit Extbase/Fluid · PHP · MySQL · HTML5 · CSS3 · JavaScript · jQuery · SASS · Git · Processing · Creative Coding · Auge für Design und Gestaltung</p>
                 <hr>
                 <div id="contact">
                     <ul>
@@ -47,9 +47,7 @@
                 </div>
                 <hr>
                 <footer>
-                    <ul>
-                    <li><a href="html/impressum.html" target="_blank">Disclaimer & Impressum</a></li>
-                    </ul>
+                    <ul><li><a href="impressum.html" target="_blank">Disclaimer & Impressum</a></li></ul>
                 </footer>
             </div>
         </section>
