--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Jochen Wichmann · Web- & TYPO3-Entwickler · Wiesbaden</title>
         <meta name="description" content="Freier Webentwickler (Front- & Backend) mit Schwerpunkt TYPO3 und Auge für Design und Gestaltung aus Wiesbaden.">
+
+        <meta name="keywords" itemprop="keywords" content="Jochen Wichmann, Webentwickler, Web Developer, Wiesbaden, Freelancer, TYPO3, HTML5, Javascript, jQuery, Frontend, Backend, Processing" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
