--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Jochen Wichmann · Web- & TYPO3-Entwickler · Wiesbaden</title>
         <meta name="description" content="Freier Webentwickler (Front- & Backend) mit Schwerpunkt TYPO3 und Auge für Design und Gestaltung aus Wiesbaden.">
-
-        <meta name="keywords" itemprop="keywords" content="Jochen Wichmann, Webentwickler, Web Developer, Wiesbaden, Freelancer, TYPO3, HTML5, Javascript, jQuery, Frontend, Backend, Processing" />
+        <meta name="keywords" content="Jochen Wichmann, Webentwickler, Web Developer, Wiesbaden, Freelancer, TYPO3, HTML5, Javascript, jQuery, Frontend, Backend, Processing" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
         <link href='https://fonts.googleapis.com/css?family=Jockey+One' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Molengo' rel='stylesheet' type='text/css'>
@@ -18,10 +15,8 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </head>
     <body>
-
         <section id="info">
             <header>
                 <h1>Jochen Wichmann</h1>
@@ -52,20 +47,5 @@
                 </footer>
             </div>
         </section>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!--
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-        -->
     </body>
 </html>
