--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Jochen Wichmann · Web- & TYPO3-Entwickler · Wiesbaden</title>
         <meta name="description" content="Freier Webentwickler (Front- & Backend) mit Schwerpunkt TYPO3 und Auge für Design und Gestaltung aus Wiesbaden.">
+
         <meta name="keywords" content="Jochen Wichmann, Webentwickler, Web Developer, Wiesbaden, Freelancer, TYPO3, HTML5, Javascript, jQuery, Frontend, Backend, Processing" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,8 +16,10 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </head>
     <body>
+
         <section id="info">
             <header>
                 <h1>Jochen Wichmann</h1>
